# lorikeet

./: .gitignore  Cargo.toml  README.md  install.sh
src/: app.rs  checkpoints.rs  codex_oauth.rs  config.rs  events.rs  llm.rs  lsp.rs  main.rs  markdown.rs  render_store.rs  sandbox.rs  session.rs  theme.rs  tools.rs  types.rs  ui.rs  verify.rs  verify_tests.rs
src/memory/: llm_extractor.rs  manager.rs  mod.rs  redaction.rs  store.rs  types.rs
src/semantic_search/: chunker.rs  embedder.rs  index.rs  mod.rs  types.rs
