[package]
name = "lorikeet"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio-stream = "0.1"
dotenvy = "0.15"
pulldown-cmark = "0.12"
toml = "0.8"
rusqlite = { version = "0.33", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
anyhow = "1"
url = "2"
flate2 = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["parsing", "formatting"] }

# Semantic search
fastembed = "4"
usearch = "2"
bincode = "1.3"
walkdir = "2"
glob = "0.3"
dirs = "5"
parking_lot = "0.12"
unicode-width = "0.2"

# Tree-sitter for AST-aware code chunking
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"

[dev-dependencies]
tempfile = "3"
